# weld_inspection_ros

./: README.md
install/: local_setup.sh  setup.sh
install/weld_inspection/lib/weld_inspection/: spawn_welds_node  weld_inspector_node
install/weld_inspection/share/weld_inspection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/weld_inspection/share/weld_inspection/config/: weld_inspection.rviz
install/weld_inspection/share/weld_inspection/launch/: weld_inspection.launch.py
install/weld_inspection/share/weld_inspection/worlds/: weld_inspection.sdf
log/: latest_build
src/weld_inspection/: package.xml  setup.cfg  setup.py
src/weld_inspection/models/weld_piece/: model.config  model.sdf
src/weld_inspection/weld_inspection/: weld_inspector_node.py
src/weld_inspection_classic/: package.xml  setup.cfg  setup.py
src/weld_inspection_classic/launch/: weld_inspection.launch.py
src/weld_inspection_classic/models/our_factory_workshop/: model.config  model.sdf
src/weld_inspection_classic/models/weld_piece/: model.config  model.sdf
src/weld_inspection_classic/weld_inspection_classic/: orchestrator_node.py  weld_inspector_node.py
src/weld_inspection_classic/worlds/: weld_inspection.world
